# ng2b-nm-plugin

./: CMakeLists.txt
src/: util.hpp
src/combat/: main.cpp
src/core/: main.cpp
src/effect/: main.cpp
src/loader/: main.cpp
